Ajout de la sécuritée pour JAVA + Test unitaire + Comparateur avec ou sans fin de ligne.