@@ -2,6 +2,7 @@ package fr.ludovicbouguerra.ecodigo.language;
 
 import java.io.File;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.concurrent.TimeoutException;
 import java.util.logging.Logger;
 
@@ -21,7 +22,7 @@ public class JavaLanguage implements ILanguage{
 	private Logger logger = Logger.getLogger(getClass().getName());
 	
 	@Override
-	public String execute(String code, String inputData, String expectedResult) throws UnexpectedResult {
+	public String execute(String code, Collection<String> inputData, Collection<String> expectedResult) throws UnexpectedResult {
 		logger.fine("Compilation code JAVA" + "Code " + code + "Expected Result "+ expectedResult);
 		String compilationLogs = "";
 		
@@ -42,22 +43,28 @@ public class JavaLanguage implements ILanguage{
 			compilationLogs += launcherCompilation.getResponse();
 			
 			logger.fine("Compilation logs "+ compilationLogs);
+			
+			
 			ArrayList<String> parametersJava = new ArrayList<String>();
 			parametersJava.add("/usr/bin/java");
+			parametersJava.add("-Djava.security.manager");
+			parametersJava.add("-Djava.security.policy=config/java/security.properties");
+			parametersJava.add("-Xmx10m");
 			parametersJava.add("-classpath");
 			parametersJava.add(pathName.getParent()+File.separatorChar);
 			parametersJava.add("Test");
 			
-			Launcher l = new Launcher(parametersJava, 5, inputData);
-			l.execute();
 			
-			
-			
-			if (!ComparatorFactory.getInstance().createEqualsComparator().compare(expectedResult, l.getResponse())){
-				System.out.println("exceptiion");
-				throw new UnexpectedResult(l.getErrorResponse() + l.getResponse());
+			for (int i = 0; i < inputData.size(); i++) {
+				Launcher l = new Launcher(parametersJava, 5, (String) inputData.toArray()[i]);
+				l.execute();
+				
+				if (!ComparatorFactory.getInstance().createEqualsComparator().compare((String) expectedResult.toArray()[i], l.getResponse())){
+					
+					throw new UnexpectedResult(l.getErrorResponse() + l.getResponse());
+				}
 			}
-			
+
 			return compilationLogs;
 			
 		} catch (TimeoutException e) {
